--- a/ffcv.yaml
+++ b/ffcv.yaml
@@ -1,32 +1,51 @@
 name: ffcv
 channels:
+  - https://mirrors.ustc.edu.cn/anaconda/cloud/conda-forge
+  - nvidia
   - conda-forge
-  - bioconda
+  - https://mirrors.ustc.edu.cn/anaconda/cloud/rapidsai/
+  - https://mirrors.ustc.edu.cn/anaconda/cloud/conda-forge/
+  - https://mirrors.ustc.edu.cn/anaconda/pkgs/free/
+  - https://mirrors.ustc.edu.cn/anaconda/pkgs/main/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - alsa-lib=1.2.12=h4ab18f5_0
   - aom=3.9.1=hac33072_0
+  - aws-c-common=0.9.27=h4bc722e_0
+  - azure-core-cpp=1.13.0=h935415a_0
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py39h3d6467e_1
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.33.1=heb4867d_0
   - ca-certificates=2024.7.4=hbcca054_0
+  - cachetools=5.5.0=pyhd8ed1ab_1
   - cairo=1.18.0=hebfffa5_3
   - certifi=2024.7.4=pyhd8ed1ab_0
   - cffi=1.17.0=py39h49a4b6b_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_1
+  - cloudpickle=3.1.0=pyhd8ed1ab_1
   - contourpy=1.2.1=py39h7633fee_0
+  - cuda-profiler-api=11.8.86=0
+  - cuda-version=11.3=hbc958af_3
   - cudatoolkit=11.3.1=h2bc3f7f_2
   - cycler=0.12.1=pyhd8ed1ab_0
   - dav1d=1.2.1=hd590300_0
   - dbus=1.13.6=h5008d03_3
+  - dlpack=0.8=h59595ed_3
   - double-conversion=3.3.0=h59595ed_0
   - expat=2.6.2=h59595ed_0
+  - fastrlock=0.8.2=py39h3d6467e_2
   - ffmpeg=6.1.2=gpl_hebc05b9_101
   - filelock=3.15.4=pyhd8ed1ab_0
+  - fmt=10.2.1=h00ab1b0_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
@@ -41,6 +60,7 @@ dependencies:
   - fsspec=2024.6.1=pyhff2d567_0
   - gettext=0.22.5=he02047a_3
   - gettext-tools=0.22.5=he02047a_3
+  - gflags=2.2.2=he1b5a44_1004
   - gmp=6.3.0=hac33072_2
   - gmpy2=2.1.5=py39h048c657_1
   - gnutls=3.8.7=h32866dd_0
@@ -54,9 +74,11 @@ dependencies:
   - idna=3.8=pyhd8ed1ab_0
   - imath=3.1.11=hfc55251_0
   - importlib-resources=6.4.4=pyhd8ed1ab_0
+  - importlib_metadata=8.5.0=hd8ed1ab_1
   - importlib_resources=6.4.4=pyhd8ed1ab_0
   - jasper=4.2.4=h536e39c_0
   - jinja2=3.1.4=pyhd8ed1ab_0
+  - joblib=1.4.2=pyhd8ed1ab_1
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py39h7633fee_1
   - krb5=1.21.3=h659f571_0
@@ -76,6 +98,7 @@ dependencies:
   - libcblas=3.9.0=23_linux64_openblas
   - libclang-cpp18.1=18.1.8=default_hf981a13_2
   - libclang13=18.1.8=default_h9def88c_2
+  - libcrc32c=1.1.2=h9c3ff4c_0
   - libcups=2.3.3=h4637d8d_4
   - libcurl=8.9.1=hdb1bdb2_0
   - libdeflate=1.21=h4bc722e_0
@@ -83,6 +106,7 @@ dependencies:
   - libedit=3.1.20191231=he28a2e2_2
   - libegl=1.7.0=ha4b6fd6_0
   - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
   - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=14.1.0=h77fa898_0
@@ -105,6 +129,7 @@ dependencies:
   - libllvm14=14.0.6=hcd5def8_4
   - libllvm18=18.1.8=h8b73ec9_2
   - libnghttp2=1.58.0=h47da74e_1
+  - libnl=3.10.0=h4bc722e_0
   - libnsl=2.0.1=hd590300_0
   - libopenblas=0.3.27=pthreads_hac2b453_1
   - libopencv=4.10.0=headless_py39ha573dff_3
@@ -126,6 +151,7 @@ dependencies:
   - libpng=1.6.43=h2797004_0
   - libpq=16.4=h482b261_0
   - libprotobuf=4.25.3=h08a7969_0
+  - libre2-11=2023.09.01=h5a48ba9_2
   - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=14.1.0=hc0a3c3a_0
@@ -133,6 +159,7 @@ dependencies:
   - libtiff=4.6.0=h46a8edc_4
   - libtorch=2.3.1=cpu_generic_h970db74_0
   - libunistring=0.9.10=h7f98852_0
+  - libutf8proc=2.8.0=h166bdaf_0
   - libuuid=2.38.1=h0b41bf4_0
   - libuv=1.48.0=hd590300_0
   - libva=2.22.0=hb711507_0
@@ -144,21 +171,28 @@ dependencies:
   - libxml2=2.12.7=he7c6b58_4
   - libxslt=1.1.39=h76b75d6_0
   - libzlib=1.3.1=h4ab18f5_1
-  - llvmlite=0.43.0=py39h81bab63_0
+  - locket=1.0.0=pyhd8ed1ab_0
+  - lz4-c=1.9.4=hcb278e6_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_1
   - markupsafe=2.1.5=py39hd1e30aa_0
   - matplotlib=3.9.2=py39hf3d152e_0
   - matplotlib-base=3.9.2=py39h0565ad7_0
+  - mdurl=0.1.2=pyhd8ed1ab_1
   - mpc=1.3.1=hfe3b2da_0
   - mpfr=4.2.1=h38ae2d0_2
   - mpmath=1.3.0=pyhd8ed1ab_0
+  - msgpack-python=1.0.8=py39h95fdab5_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=9.0.1=h70512c7_0
   - mysql-libs=9.0.1=ha479ceb_0
+  - nccl=2.22.3.1=hee583db_1
   - ncurses=6.5=h59595ed_0
   - nettle=3.9.1=h7ab15ed_0
   - networkx=2.8.8=pyhd8ed1ab_0
   - nomkl=1.0=h5ca1d4c_0
   - numba=0.60.0=py39h0320e7d_0
+  - nvcomp=3.0.6=h56904bc_0
+  - nvtx=0.2.10=py39hd1e30aa_0
   - ocl-icd=2.3.2=hd590300_1
   - opencv=4.10.0=headless_py39h4799dc9_3
   - openexr=3.2.2=haf962dd_1
@@ -168,16 +202,21 @@ dependencies:
   - p11-kit=0.24.1=hc5aa10d_0
   - packaging=24.1=pyhd8ed1ab_0
   - pandas=2.2.2=py39hfc16268_1
+  - partd=1.4.2=pyhd8ed1ab_0
   - patsy=0.5.6=pyhd8ed1ab_0
   - pcre2=10.44=hba22ea6_2
   - pillow=10.4.0=py39h16a7006_0
   - pip=24.2=pyhd8ed1ab_0
   - pixman=0.43.2=h59595ed_0
   - pkg-config=0.29.2=h4bc722e_1009
+  - psutil=6.0.0=py39hd3abc70_0
   - pthread-stubs=0.4=h36c2ea0_1001
+  - ptxcompiler=0.8.1=py39h5232d60_2
   - pugixml=1.14=h59595ed_0
   - py-opencv=4.10.0=headless_py39h1c9db89_3
   - pycparser=2.22=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_1
+  - pynvml=11.4.1=pyhd8ed1ab_0
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pyside6=6.7.2=py39h8242bd1_2
   - pysocks=1.7.1=pyha2e5f31_6
@@ -190,16 +229,19 @@ dependencies:
   - qt6-main=6.7.2=hb12f9c5_5
   - readline=8.2=h8228510_1
   - requests=2.32.3=pyhd8ed1ab_0
+  - s2n=1.5.1=h3400bea_0
   - scipy=1.13.1=py39haf93ffa_0
-  - setuptools=72.2.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sleef=3.6.1=h1b44611_2
   - snappy=1.2.1=ha2e4443_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_0
   - statsmodels=0.14.2=py39hd92a3bb_0
   - svt-av1=2.1.2=hac33072_0
   - sympy=1.13.2=pypyh2585a3b_103
   - tbb=2021.12.0=h434a139_3
+  - tblib=3.0.0=pyhd8ed1ab_1
   - tk=8.6.13=noxft_h4845f30_101
+  - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4.1=py39hd3abc70_0
   - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
@@ -235,41 +277,101 @@ dependencies:
   - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xproto=7.0.31=h7f98852_1007
+  - xyzservices=2024.9.0=pyhd8ed1ab_1
   - xz=5.2.6=h166bdaf_0
+  - yaml=0.2.5=h7f98852_2
+  - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.20.0=pyhd8ed1ab_0
   - zlib=1.3.1=h4ab18f5_1
   - zstandard=0.23.0=py39h623c9ba_0
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - absl-py==2.1.0
+      - accelerate==1.1.0
+      - aiohappyeyeballs==2.4.3
+      - aiohttp==3.10.10
+      - aiosignal==1.3.1
       - assertpy==1.1
       - astunparse==1.6.3
+      - async-timeout==4.0.3
+      - attrs==24.2.0
+      - comet-ml==3.47.2
+      - configobj==5.0.9
+      - cupy-cuda113==10.6.0
+      - curve==0.0.7
+      - datasets==3.1.0
+      - diffusers==0.31.0
+      - dill==0.3.8
+      - docker-pycreds==0.4.0
+      - dulwich==0.22.4
+      - einops==0.8.0
+      - everett==3.1.0
       - fastargs==1.2.0
       - ffcv==1.0.2
       - flatbuffers==24.3.25
+      - frozenlist==1.5.0
       - gast==0.6.0
+      - gitdb==4.0.11
+      - gitpython==3.1.43
       - google-pasta==0.2.0
-      - grpcio==1.66.0
+      - grpcio==1.66.1
       - h5py==3.11.0
+      - huggingface-hub==0.26.2
+      - imageio==2.36.0
       - importlib-metadata==8.4.0
-      - joblib==1.4.2
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2024.10.1
       - keras==3.5.0
       - libclang==18.1.1
+      - lightning-utilities==0.11.8
+      - llvmlite==0.39.1
+      - lpips==0.1.4
       - markdown==3.7
-      - markdown-it-py==3.0.0
-      - mdurl==0.1.2
       - ml-dtypes==0.4.0
+      - multidict==6.1.0
+      - multiprocess==0.70.16
       - namex==0.0.8
-      - numpy==1.26.4
+      - numpy==1.23.5
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.6.68
+      - nvidia-nvtx-cu12==12.1.105
+      - nvidia-pyindex==1.0.9
+      - opentsne==1.0.2
       - opt-einsum==3.3.0
       - optree==0.12.1
-      - protobuf==4.25.4
-      - psutil==6.0.0
-      - pygments==2.18.0
+      - peft==0.13.2
+      - platformdirs==4.3.6
+      - propcache==0.2.0
+      - protobuf==3.20.3
+      - pyarrow==18.0.0
+      - pynndescent==0.5.10
+      - python-box==6.1.0
+      - pytorch-fid==0.3.0
       - pytorch-pfn-extras==0.7.7
-      - rich==13.7.1
-      - scikit-learn==1.5.1
+      - pyyaml==6.0.2
+      - referencing==0.35.1
+      - regex==2024.9.11
+      - requests-toolbelt==1.0.0
+      - rich==13.8.0
+      - rpds-py==0.20.1
+      - safetensors==0.4.5
+      - scikit-learn==1.6.0
+      - seaborn==0.13.2
+      - semantic-version==2.10.0
+      - sentry-sdk==2.18.0
       - setproctitle==1.3.3
+      - setuptools==75.6.0
+      - simplejson==3.19.3
+      - smmap==5.0.1
       - tensorboard==2.17.1
       - tensorboard-data-server==0.7.2
       - tensorflow==2.17.0
@@ -277,10 +379,20 @@ dependencies:
       - termcolor==2.4.0
       - terminaltables==3.1.10
       - threadpoolctl==3.5.0
-      - torch==1.12.1+cu113
-      - torchaudio==0.12.1+cu113
-      - torchvision==0.13.1+cu113
+      - tokenizers==0.20.3
+      - torch==2.4.1
+      - torch-fidelity==0.3.0
+      - torchmetrics==1.5.1
+      - torchvision==0.19.1
       - tqdm==4.66.5
+      - transformers==4.46.2
+      - triton==3.0.0
+      - umap==0.1.1
+      - umap-learn==0.5.7
+      - wandb==0.18.5
       - werkzeug==3.0.4
       - wrapt==1.16.0
+      - wurlitzer==3.1.1
+      - xxhash==3.5.0
+      - yarl==1.17.1
 prefix: /root/miniconda3/envs/ffcv
